change default locale constructor, deprecated